--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,15 +7,12 @@
   </head>
   <body >
     
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <header class="sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container-fluid">
           <div class="collapse navbar-collapse " id="navbarsExample08">
-            <img src="../assets/media/logo-white.png">
-            <ul class="navbar-nav justify-content-md-start w-100">
-              <li class="">
-               
-              </li>
+            <img class="navbar-brand"  src="../assets/media/logo-white.png">
+            <ul class="navbar-nav justify-content-md-start">
               <li class="nav-item">
                 <a class="nav-link" routerLink="">Página Principal</a>
               </li>
@@ -27,13 +24,21 @@
               </li>
 
             </ul>
+            
           </div>
+          <button class="btn btn-warning" type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-person" viewBox="0 0 16 16">
+              <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
+              <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+              
+              <a class="nav-link text-dark" routerLink="gallery">Cuenta</a>
+            </svg>
+            Cuenta</button>
         </div>
-        <div class="nav-item bg-warning ">
-          <a class="nav-link text-dark" routerLink="gallery">Login/Sing Up</a>
-      </div>
+
       </nav>
     </header>
+
       <div class="principal" w-50>
         <main>
           <div class ="routerHolder text-light">
