Añadidos componentes login y registro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="nav-item bg-warning ">
-          <a class="nav-link text-dark" routerLink="gallery">Login/Sing Up</a>
+          <a class="nav-link text-dark" routerLink="login">Login/Sing Up</a>
       </div>
       </nav>
     </header>
