--- a/src/app/registro/registro.component.html
+++ b/src/app/registro/registro.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="form-group">
             <label for="fecha_nacimiento">Fecha de nacimiento</label>
-            <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" formControlName="fecha_nacimiento" max={{fecha_actual}} required [(ngModel)]="fecha_nacimiento">
+            <input type="date" name="fecha_nacimiento" id="fecha_nacimiento" formControlName="fecha_nacimiento" max={{fecha_actual}} required>
             <div class="alert alert-danger mt-2" [hidden]="miFormulario.get('fecha_nacimiento')?.value || miFormulario.get('fecha_nacimiento')?.pristine">
                 Por favor, introduce una fecha válida
             </div>
