--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
           <footer class="py-3 " >
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
               <li class="nav-item"><a routerLink="" class="nav-link px-2 text-dark">Home</a></li>
-              <li class="nav-item"><a routerLink="blog" class="nav-link px-2 text-dark">Blog</a></li>
+              <li class="nav-item"><a routerLink="blog" class="nav-link px-2 text-dark">Galeria</a></li>
               <li class="nav-item"><a routerLink="contact" class="nav-link px-2 text-dark">Contact</a></li>
             </ul>
             <p class="text-center  text-dark">&copy; 2023</p>
