--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,11 @@
-.d-block{
+.conocenos{
+  margin-top: 5%;
+}
 
-  }
-.carousel{
-    height:400px;
-    overflow:hidden;
+.artistasCont{
+  width: inherit;
+  display: flex;
+  flex-wrap: wrap;
+  align-items:center;
+  justify-content:center;
 }
