--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,39 +1,20 @@
-<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img
-        src="../assets/media/carr1.jpg"
-        class="d-block w-100" />
-        <div class="container">
- 
-        </div>
+<div class="carouselCont mb-5">
+  <app-carousel></app-carousel>
+</div>
+
+  <div class="intro mt-5">
+    <div class="px-5 d-flex flex-column align-items-center">
+      <div class="title pb-2 border-bottom">
+        <h1>Conocenos</h1>
       </div>
-      <div class="carousel-item">
-        <img
-        src="../assets/media/carr2.jpg"
-        class="d-block w-100" />
-        <div class="container">
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img
-        src="../assets/media/carr3.jpg"
-        class="d-block w-100" />
-        <div class="container">
-        </div>
+      <div class="my-5 ">
+        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis expedita quam inventore et possimus, velit itaque fugit, totam, explicabo eius molestiae corrupti in. Quisquam ipsam nostrum quasi voluptate perspiciatis nobis!</span>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+  </div>
+  <div class="artistasCont"  >
+    <div *ngFor=" let a of arrArtistas">
+      <app-artistas2 [artista]="a"></app-artistas2>
+    </div>
+  
   </div>
