--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,3 +5,13 @@
     height:400px;
     overflow:hidden;
 }
+
+.artistasCont{
+  margin-top: 5%;
+  margin-bottom: 10%;
+  width: inherit;
+  display: flex;
+  flex-wrap: wrap;
+  align-items:center;
+  justify-content:center;
+}
